ast/src/snapshots/ast__parser__tests__generic_function_snapshots@missing_comma.snap
---
source: ast/src/parser.rs
expression: "parse_err(\"fn test<T1 T2>() -> void {}\")"
---
UnexpectedToken {
    source: NamedSource {
        name: "<test>",
        content: "fn test<T1 T2>() -> void {}",
    },
    range: 11..13,
    expected: ,,
    actual: identifier,
}
