ast/src/snapshots/ast__parser__tests__generic_function_snapshots@missing_generic.snap
---
source: ast/src/parser.rs
expression: "parse_err(\"fn test<T1,>() -> void {}\")"
---
ExpectedIdentifier {
    source: NamedSource {
        name: "<test>",
        content: "fn test<T1,>() -> void {}",
    },
    range: 11..12,
}
