ast/src/snapshots/ast__parser__tests__generic_function_snapshots@single_generic.snap
---
source: ast/src/parser.rs
expression: "parse(\"fn test<T>() -> void {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "test",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [
                TypeParameter {
                    name: Identifier {
                        name: "T",
                        location: Location(
                            8..9,
                        ),
                    },
                },
            ],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        16..20,
                    ),
                },
            ),
            block: Block {
                statements: [],
                location: Location(
                    21..23,
                ),
            },
            location: Location(
                0..23,
            ),
        },
    ),
]
