ast/src/snapshots/ast__parser__tests__generic_method_snapshots@missing_comma.snap
---
source: ast/src/parser.rs
expression: "parse_err(\"class Test { fn test<T1 T2>() -> void {} }\")"
---
UnexpectedToken {
    source: NamedSource {
        name: "<test>",
        content: "class Test { fn test<T1 T2>() -> void {} }",
    },
    range: 24..26,
    expected: ,,
    actual: identifier,
}
