ast/src/snapshots/ast__parser__tests__generic_method_snapshots@missing_generic.snap
---
source: ast/src/parser.rs
expression: "parse_err(\"class Test { fn test<T1,>() -> void {} }\")"
---
ExpectedIdentifier {
    source: NamedSource {
        name: "<test>",
        content: "class Test { fn test<T1,>() -> void {} }",
    },
    range: 24..25,
}
